--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -12,6 +12,7 @@
     "amazon-cognito-identity-js": "^6.3.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
@@ -19,5 +20,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@radix-ui/react-dialog": "^1.1.15"
   }
 }
